--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    /* animation: App-logo-spin infinite 20s linear; */
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -37,11 +31,24 @@
   color: white;
 }
 
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+.senders {
+  color: #282c34;
+}
+
+.senders-tit {
+  position: relative;
+  width: 130px;
+  margin: 0 auto;
+}
+
+.senders-tit::before {
+  content: '';
+  width: 100%;
+  height: 30%;
+  position: absolute;
+  bottom: 0;
+  left: 0px;
+  background: #f56565;
+  z-index: -1;
+  transform: rotate(-1deg);
+}
